--- a/RSM-ipympl-basemap.ipynb
+++ b/RSM-ipympl-basemap.ipynb
@@ -14,6 +14,7 @@
     "from pylab import *\n",
     "import matplotlib.tri as Tri\n",
     "import matplotlib.pyplot as plt\n",
+    "from mpl_toolkits.basemap import Basemap\n",
     "\n",
     "import h5py\n",
     "import numpy as np\n",
@@ -117,8 +118,15 @@
     "fig = plt.figure(\"RSM Test\", figsize=(5,3), dpi=144);\n",
     "ax = fig.add_axes([0.0, 0.1, 0.8, 0.8]) \n",
     "ax.set_aspect(1.0/np.cos(latmin * np.pi / 180.0))\n",
+    "m = Basemap(projection='cyl', llcrnrlon=-80.0, llcrnrlat=33.0, urcrnrlon=-74.0, urcrnrlat=37.0,\n",
+    "            lat_0=35.0, lon_0=-77.0, resolution='i')\n",
     "\n",
-    "contour = tricontourf(triangulation, zhat, levels=levels,shading='faceted')\n",
+    "contour = m.contourf(lon, lat, zhat, triangles=nv, ax=ax,tri=True, levels=levels, shading='faceted', alpha=0.5)\n",
+    "m.drawcoastlines()\n",
+    "m.drawstates()\n",
+    "m.drawrivers()\n",
+    "m.warpimage()\n",
+    "\n",
     "plt.grid(True)\n",
     "plt.xlim((-80,-74))\n",
     "plt.ylim((33,37))\n",
@@ -176,7 +184,7 @@
     "\n",
     "    for thing in contour.collections:\n",
     "        thing.remove()\n",
-    "    contour = ax.tricontourf(triangulation, zhat, levels=levels,shading='faceted')\n",
+    "    contour = m.contourf(lon, lat, zhat, triangles=nv, ax=ax,tri=True, levels=levels, shading='faceted')\n",
     "    \n",
     "def update_vmax(change):\n",
     "    global Vmax\n",
@@ -230,7 +238,7 @@
   },
   "widgets": {
    "state": {
-    "0fccd9ef4ba845c0a9d7deab4bcaf2f8": {
+    "ecb17f094e9b49d599597d5da228c1f6": {
      "views": [
       {
        "cell_index": 6
