--- a/RSM-ipympl-basemap.ipynb
+++ b/RSM-ipympl-basemap.ipynb
@@ -64,15 +64,16 @@
     "H_b=xtest[1]\n",
     "TS=xtest[2]\n",
     "Vmax=xtest[3]\n",
-    "LatNorth=xtest[4]\n",
-    "LatSouth=xtest[5]\n",
+    "LonNorth=xtest[4]\n",
+    "LonSouth=xtest[5]\n",
+    "alpha = 0.55\n",
     "\n",
     "p1min=np.min(P[:,0])*1.1; p1max=np.max(P[:,0])*0.9   # rmw\n",
     "p2min=np.min(P[:,1])*1.1; p2max=np.max(P[:,1])*0.9   # H_b\n",
     "p3min=np.min(P[:,2])*1.1; p3max=np.max(P[:,2])*0.9   # TS\n",
     "p4min=np.min(P[:,3])*1.1; p4max=np.max(P[:,3])*0.9   # Vmax\n",
-    "p5min=np.min(P[:,4])*1.1; p5max=np.max(P[:,4])*0.9   # LatNorth\n",
-    "p6min=np.min(P[:,5])*1.1; p6max=np.max(P[:,5])*0.9   # LatSouth\n",
+    "p5min=np.min(P[:,4])*1.1; p5max=np.max(P[:,4])*0.9   # LonNorth\n",
+    "p6min=np.min(P[:,5])*1.1; p6max=np.max(P[:,5])*0.9   # LonSouth\n",
     "\n",
     "dp1=(p1max-p1min)/20\n",
     "dp2=(p2max-p2min)/20\n",
@@ -103,7 +104,7 @@
    "source": [
     "lon_offset=-82\n",
     "\n",
-    "xtest=np.array([rmw,H_b,TS,Vmax,LatNorth,LatSouth])\n",
+    "xtest=np.array([rmw,H_b,TS,Vmax,LonNorth,LonSouth])\n",
     "temp=central_ckv(P,R,c,k,weights,Nd,index,xtest)\n",
     "vmin=0\n",
     "vmax=5\n",
@@ -121,21 +122,21 @@
     "m = Basemap(projection='cyl', llcrnrlon=-80.0, llcrnrlat=33.0, urcrnrlon=-74.0, urcrnrlat=37.0,\n",
     "            lat_0=35.0, lon_0=-77.0, resolution='i')\n",
     "\n",
-    "contour = m.contourf(lon, lat, zhat, triangles=nv, ax=ax,tri=True, levels=levels, shading='faceted', alpha=0.5)\n",
+    "contour = m.contourf(lon, lat, zhat, triangles=nv, ax=ax,tri=True, levels=levels, shading='faceted', alpha=alpha)\n",
     "m.drawcoastlines()\n",
     "m.drawstates()\n",
     "m.drawrivers()\n",
     "m.warpimage()\n",
     "\n",
-    "plt.grid(True)\n",
-    "plt.xlim((-80,-74))\n",
-    "plt.ylim((33,37))\n",
-    "plt.tick_params(axis='both', which='major', labelsize=8)\n",
-    "plt.plot([-80, -70],[33.5,33.5],'g-')\n",
-    "plt.plot([-80, -70],[36.0,36.0],'g-')\n",
-    "plt.plot([LatSouth+lon_offset],[33.5],'r*-')\n",
-    "plt.plot([LatNorth+lon_offset],[36.0],'r*-')\n",
-    "plt.plot([LatNorth+lon_offset, LatSouth+lon_offset],[36.0,33.5],'y-')\n",
+    "ax.grid(True)\n",
+    "ax.set_xlim((-80,-74))\n",
+    "ax.set_ylim((33,37))\n",
+    "ax.tick_params(axis='both', which='major', labelsize=8)\n",
+    "ax.plot([-80, -70],[33.5,33.5],'g-')\n",
+    "ax.plot([-80, -70],[36.0,36.0],'g-')\n",
+    "artists_LonSouth_point = ax.plot([LonSouth+lon_offset],[33.5],'r*-')\n",
+    "artists_LonNorth_point = ax.plot([LonNorth+lon_offset],[36.0],'r*-')\n",
+    "artists_path_line = ax.plot([LonNorth+lon_offset, LonSouth+lon_offset],[36.0,33.5],'y-')\n",
     "\n",
     "# add colorbar\n",
     "cbax = fig.add_axes([0.75, 0.1, 0.05, 0.8]) \n",
@@ -158,8 +159,9 @@
     "H_b_slider      = FloatSlider(min=p2min,max=p2max,step=dp2,value=H_b)\n",
     "TS_slider       = FloatSlider(min=p3min,max=p3max,step=dp3,value=TS)\n",
     "Vmax_slider     = FloatSlider(min=p4min,max=p4max,step=dp4,value=Vmax)\n",
-    "LatNorth_slider = FloatSlider(min=p5min,max=p5max,step=dp5,value=LatNorth)\n",
-    "LatSouth_slider = FloatSlider(min=p6min,max=p6max,step=dp6,value=LatSouth)"
+    "LonNorth_slider = FloatSlider(min=p5min,max=p5max,step=dp5,value=LonNorth)\n",
+    "LonSouth_slider = FloatSlider(min=p6min,max=p6max,step=dp6,value=LonSouth)\n",
+    "alpha_slider    = FloatSlider(min=0.0, max=1.0, step=0.05, value=alpha)"
    ]
   },
   {
@@ -171,9 +173,9 @@
    "outputs": [],
    "source": [
     "def update_contour():\n",
-    "    global contour, cb\n",
+    "    global contour, xtest, temp, zhat\n",
     "\n",
-    "    xtest=np.array([rmw,H_b,TS,Vmax,LatNorth,LatSouth])\n",
+    "    xtest=np.array([rmw,H_b,TS,Vmax,LonNorth,LonSouth])\n",
     "    temp=central_ckv(P,R,c,k,weights,Nd,index,xtest)\n",
     "\n",
     "    # put response into variable sized as lon.shape\n",
@@ -184,26 +186,147 @@
     "\n",
     "    for thing in contour.collections:\n",
     "        thing.remove()\n",
-    "    contour = m.contourf(lon, lat, zhat, triangles=nv, ax=ax,tri=True, levels=levels, shading='faceted')\n",
-    "    \n",
-    "def update_vmax(change):\n",
-    "    global Vmax\n",
-    "    Vmax = change['new']\n",
-    "    update_contour()\n",
-    "    fig_canvas.draw_idle()\n",
-    "\n",
-    "Vmax_slider.observe(update_vmax, names=[\"value\"])"
+    "    contour = m.contourf(lon, lat, zhat, triangles=nv, ax=ax,tri=True, levels=levels, shading='faceted', alpha=alpha)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def update_rmw(change):\n",
+    "    global rmw\n",
+    "    rmw = change['new']\n",
+    "    update_contour()\n",
+    "    fig_canvas.draw_idle()\n",
+    "\n",
+    "rmw_slider.observe(update_rmw, names=[\"value\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def update_H_b(change):\n",
+    "    global H_b\n",
+    "    H_b = change['new']\n",
+    "    update_contour()\n",
+    "    fig_canvas.draw_idle()\n",
+    "\n",
+    "H_b_slider.observe(update_H_b, names=[\"value\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def update_TS(change):\n",
+    "    global TS\n",
+    "    TS = change['new']\n",
+    "    update_contour()\n",
+    "    fig_canvas.draw_idle()\n",
+    "\n",
+    "TS_slider.observe(update_TS, names=[\"value\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def update_Vmax(change):\n",
+    "    global Vmax\n",
+    "    Vmax = change['new']\n",
+    "    update_contour()\n",
+    "    fig_canvas.draw_idle()\n",
+    "\n",
+    "Vmax_slider.observe(update_Vmax, names=[\"value\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "slider_box = VBox([rmw_slider,H_b_slider,TS_slider,Vmax_slider,LatNorth_slider,LatSouth_slider])\n",
+    "def update_LonNorth(change):\n",
+    "    global LonNorth, artists_LonNorth_point, artists_path_line\n",
+    "    LonNorth = change['new']\n",
+    "    artists_LonNorth_point.pop(0).remove()\n",
+    "    artists_LonNorth_point = ax.plot([LonNorth+lon_offset],[36.0],'r*-')\n",
+    "    artists_path_line.pop(0).remove()\n",
+    "    artists_path_line = ax.plot([LonNorth+lon_offset, LonSouth+lon_offset],[36.0,33.5],'y-')\n",
+    "    update_contour()\n",
+    "    fig_canvas.draw_idle()\n",
+    "\n",
+    "LonNorth_slider.observe(update_LonNorth, names=[\"value\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def update_LonSouth(change):\n",
+    "    global LonSouth, artists_LonSouth_point, artists_path_line\n",
+    "    LonSouth = change['new']\n",
+    "    artists_LonSouth_point.pop(0).remove()\n",
+    "    artists_LonSouth_point = ax.plot([LonSouth+lon_offset],[33.5],'r*-')\n",
+    "    artists_path_line.pop(0).remove()\n",
+    "    artists_path_line = ax.plot([LonNorth+lon_offset, LonSouth+lon_offset],[36.0,33.5],'y-')\n",
+    "    update_contour()\n",
+    "    fig_canvas.draw_idle()\n",
+    "\n",
+    "LonSouth_slider.observe(update_LonSouth, names=[\"value\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def update_alpha(change):\n",
+    "    global alpha, contour\n",
+    "    alpha = change['new']\n",
+    "    for thing in contour.collections:\n",
+    "        thing.remove()\n",
+    "    contour = m.contourf(lon, lat, zhat, triangles=nv, ax=ax,tri=True, levels=levels, shading='faceted', alpha=alpha)\n",
+    "    fig_canvas.draw_idle()\n",
+    "\n",
+    "alpha_slider.observe(update_alpha, names=[\"value\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "slider_box = VBox([rmw_slider,H_b_slider,TS_slider,Vmax_slider,LonNorth_slider,LonSouth_slider,alpha_slider])\n",
     "HBox([fig_canvas, slider_box])"
    ]
   },
@@ -238,10 +361,10 @@
   },
   "widgets": {
    "state": {
-    "ecb17f094e9b49d599597d5da228c1f6": {
+    "d3d83283486e4a0eb37dd938cce25c2f": {
      "views": [
       {
-       "cell_index": 6
+       "cell_index": 13
       }
      ]
     }
