Widget descriptions and scale longitude sliders.

--- a/RSM-ipympl-basemap.ipynb
+++ b/RSM-ipympl-basemap.ipynb
@@ -151,17 +151,17 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "rmw_slider      = FloatSlider(min=p1min,max=p1max,step=dp1,value=rmw)\n",
-    "H_b_slider      = FloatSlider(min=p2min,max=p2max,step=dp2,value=H_b)\n",
-    "TS_slider       = FloatSlider(min=p3min,max=p3max,step=dp3,value=TS)\n",
-    "Vmax_slider     = FloatSlider(min=p4min,max=p4max,step=dp4,value=Vmax)\n",
-    "LonNorth_slider = FloatSlider(min=p5min,max=p5max,step=dp5,value=LonNorth)\n",
-    "LonSouth_slider = FloatSlider(min=p6min,max=p6max,step=dp6,value=LonSouth)\n",
-    "alpha_slider    = FloatSlider(min=0.0, max=1.0, step=0.05, value=alpha)"
+    "rmw_slider      = FloatSlider(min=p1min, max=p1max, step=dp1, value=rmw, description=\"Radius to Max Winds\")\n",
+    "H_b_slider      = FloatSlider(min=p2min, max=p2max, step=dp2, value=H_b, description=\"Holland B\")\n",
+    "TS_slider       = FloatSlider(min=p3min, max=p3max, step=dp3, value=TS, description=\"Forward Speed\")\n",
+    "Vmax_slider     = FloatSlider(min=p4min, max=p4max, step=dp4, value=Vmax, description=\"Max Wind Speed\")\n",
+    "LonNorth_slider = FloatSlider(min=p5min+lon_offset, max=p5max+lon_offset, step=dp5, value=LonNorth+lon_offset, description=\"Northern Longitude\")\n",
+    "LonSouth_slider = FloatSlider(min=p6min+lon_offset, max=p6max+lon_offset, step=dp6, value=LonSouth+lon_offset, description=\"Southern Longitude\")\n",
+    "alpha_slider    = FloatSlider(min=0.0, max=1.0, step=0.05, value=alpha, description=\"Transparency\")"
    ]
   },
   {
@@ -267,7 +267,7 @@
    "source": [
     "def update_LonNorth(change):\n",
     "    global LonNorth, artists_LonNorth_point, artists_path_line\n",
-    "    LonNorth = change['new']\n",
+    "    LonNorth = change['new'] - lon_offset\n",
     "    artists_LonNorth_point.pop(0).remove()\n",
     "    artists_LonNorth_point = ax.plot([LonNorth+lon_offset],[36.0],'r*-')\n",
     "    artists_path_line.pop(0).remove()\n",
@@ -288,7 +288,7 @@
    "source": [
     "def update_LonSouth(change):\n",
     "    global LonSouth, artists_LonSouth_point, artists_path_line\n",
-    "    LonSouth = change['new']\n",
+    "    LonSouth = change['new'] - lon_offset\n",
     "    artists_LonSouth_point.pop(0).remove()\n",
     "    artists_LonSouth_point = ax.plot([LonSouth+lon_offset],[33.5],'r*-')\n",
     "    artists_path_line.pop(0).remove()\n",
@@ -329,15 +329,6 @@
     "slider_box = VBox([rmw_slider,H_b_slider,TS_slider,Vmax_slider,LonNorth_slider,LonSouth_slider,alpha_slider])\n",
     "HBox([fig_canvas, slider_box])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -361,7 +352,7 @@
   },
   "widgets": {
    "state": {
-    "d3d83283486e4a0eb37dd938cce25c2f": {
+    "e577642e97754a9e9f7192e33bbc9bf1": {
      "views": [
       {
        "cell_index": 13
