--- a/RSM-ipympl-basemap.ipynb
+++ b/RSM-ipympl-basemap.ipynb
@@ -122,7 +122,8 @@
     "m = Basemap(projection='cyl', llcrnrlon=-80.0, llcrnrlat=33.0, urcrnrlon=-74.0, urcrnrlat=37.0,\n",
     "            lat_0=35.0, lon_0=-77.0, resolution='i')\n",
     "\n",
-    "contour = m.contourf(lon, lat, zhat, triangles=nv, ax=ax,tri=True, levels=levels, shading='faceted', alpha=alpha)\n",
+    "contour = m.contourf(lon, lat, zhat, triangles=nv, ax=ax,tri=True,\n",
+    "                     levels=levels, shading='faceted', alpha=alpha, cmap=plt.cm.jet)\n",
     "m.drawcoastlines()\n",
     "m.drawstates()\n",
     "m.drawrivers()\n",
@@ -186,7 +187,8 @@
     "\n",
     "    for thing in contour.collections:\n",
     "        thing.remove()\n",
-    "    contour = m.contourf(lon, lat, zhat, triangles=nv, ax=ax,tri=True, levels=levels, shading='faceted', alpha=alpha)"
+    "    contour = m.contourf(lon, lat, zhat, triangles=nv, ax=ax,tri=True,\n",
+    "                         levels=levels, shading='faceted', alpha=alpha, cmap=plt.cm.jet)"
    ]
   },
   {
@@ -329,6 +331,15 @@
     "slider_box = VBox([rmw_slider,H_b_slider,TS_slider,Vmax_slider,LonNorth_slider,LonSouth_slider,alpha_slider])\n",
     "HBox([fig_canvas, slider_box])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -352,7 +363,7 @@
   },
   "widgets": {
    "state": {
-    "e577642e97754a9e9f7192e33bbc9bf1": {
+    "6704c8b35d7b4aa9a854087a2ecf3d8d": {
      "views": [
       {
        "cell_index": 13
