Fix colorbar axis placement and add parallels and meridians.

--- a/RSM-ipympl-basemap.ipynb
+++ b/RSM-ipympl-basemap.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "urth": {
+     "dashboard": {}
+    }
    },
    "outputs": [],
    "source": [
@@ -29,7 +32,10 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "urth": {
+     "dashboard": {}
+    }
    },
    "outputs": [],
    "source": [
@@ -46,7 +52,10 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "urth": {
+     "dashboard": {}
+    }
    },
    "outputs": [],
    "source": [
@@ -98,7 +107,10 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "urth": {
+     "dashboard": {}
+    }
    },
    "outputs": [],
    "source": [
@@ -117,7 +129,7 @@
     "zhat[zhat<0]=0\n",
     "\n",
     "fig = plt.figure(\"RSM Test\", figsize=(5,3), dpi=144);\n",
-    "ax = fig.add_axes([0.0, 0.1, 0.8, 0.8]) \n",
+    "ax = fig.add_axes([0.05, 0.1, 0.8, 0.8]) \n",
     "ax.set_aspect(1.0/np.cos(latmin * np.pi / 180.0))\n",
     "m = Basemap(projection='cyl', llcrnrlon=-80.0, llcrnrlat=33.0, urcrnrlon=-74.0, urcrnrlat=37.0,\n",
     "            lat_0=35.0, lon_0=-77.0, resolution='i')\n",
@@ -129,10 +141,12 @@
     "m.drawrivers()\n",
     "m.warpimage()\n",
     "\n",
-    "ax.grid(True)\n",
-    "ax.set_xlim((-80,-74))\n",
-    "ax.set_ylim((33,37))\n",
-    "ax.tick_params(axis='both', which='major', labelsize=8)\n",
+    "# labels = [left,right,top,bottom]\n",
+    "parallels = np.arange(33.0, 37.5, 0.5)\n",
+    "m.drawparallels(parallels,labels=[True,False,False,False], fontsize=6, labelstyle=\"+/-\")\n",
+    "meridians = np.arange(-80.0, -73.5 , 0.5)\n",
+    "m.drawmeridians(meridians,labels=[False,False,False,True], fontsize=6, labelstyle=\"+/-\")\n",
+    "\n",
     "ax.plot([-80, -70],[33.5,33.5],'g-')\n",
     "ax.plot([-80, -70],[36.0,36.0],'g-')\n",
     "artists_LonSouth_point = ax.plot([LonSouth+lon_offset],[33.5],'r*-')\n",
@@ -140,7 +154,7 @@
     "artists_path_line = ax.plot([LonNorth+lon_offset, LonSouth+lon_offset],[36.0,33.5],'y-')\n",
     "\n",
     "# add colorbar\n",
-    "cbax = fig.add_axes([0.75, 0.1, 0.05, 0.8]) \n",
+    "cbax = fig.add_axes([0.85, 0.1, 0.05, 0.8]) \n",
     "cb = plt.colorbar(contour, cax=cbax,  orientation='vertical')\n",
     "cb.set_label('[m MSL]', fontsize=8)\n",
     "cb.ax.tick_params(axis='both', which='major', labelsize=8)\n",
@@ -152,7 +166,10 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "urth": {
+     "dashboard": {}
+    }
    },
    "outputs": [],
    "source": [
@@ -169,7 +186,10 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "urth": {
+     "dashboard": {}
+    }
    },
    "outputs": [],
    "source": [
@@ -195,7 +215,10 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "urth": {
+     "dashboard": {}
+    }
    },
    "outputs": [],
    "source": [
@@ -212,7 +235,10 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "urth": {
+     "dashboard": {}
+    }
    },
    "outputs": [],
    "source": [
@@ -229,7 +255,10 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "urth": {
+     "dashboard": {}
+    }
    },
    "outputs": [],
    "source": [
@@ -246,7 +275,10 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "urth": {
+     "dashboard": {}
+    }
    },
    "outputs": [],
    "source": [
@@ -263,7 +295,10 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "urth": {
+     "dashboard": {}
+    }
    },
    "outputs": [],
    "source": [
@@ -284,7 +319,10 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "urth": {
+     "dashboard": {}
+    }
    },
    "outputs": [],
    "source": [
@@ -305,7 +343,10 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "urth": {
+     "dashboard": {}
+    }
    },
    "outputs": [],
    "source": [
@@ -324,7 +365,17 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "urth": {
+     "dashboard": {
+      "layout": {
+       "col": 0,
+       "height": 18,
+       "row": 0,
+       "width": 12
+      }
+     }
+    }
    },
    "outputs": [],
    "source": [
@@ -336,7 +387,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "urth": {
+     "dashboard": {}
+    }
    },
    "outputs": [],
    "source": []
@@ -361,9 +415,17 @@
    "pygments_lexer": "ipython3",
    "version": "3.5.2"
   },
+  "urth": {
+   "dashboard": {
+    "cellMargin": 10,
+    "defaultCellHeight": 20,
+    "layoutStrategy": "packed",
+    "maxColumns": 12
+   }
+  },
   "widgets": {
    "state": {
-    "6704c8b35d7b4aa9a854087a2ecf3d8d": {
+    "80a447b967f44269bb96ca0c7b144403": {
      "views": [
       {
        "cell_index": 13
