Fix legends and scales. WMS commnted out.

--- a/RSM-ipympl-basemap.ipynb
+++ b/RSM-ipympl-basemap.ipynb
@@ -128,18 +128,21 @@
     "zhat[NodeIndices]=temp\n",
     "zhat[zhat<0]=0\n",
     "\n",
-    "fig = plt.figure(\"RSM Test\", figsize=(5,3), dpi=144);\n",
+    "fig = plt.figure(\"Storm Surge\", figsize=(5,3), dpi=144);\n",
     "ax = fig.add_axes([0.05, 0.1, 0.8, 0.8]) \n",
     "ax.set_aspect(1.0/np.cos(latmin * np.pi / 180.0))\n",
     "m = Basemap(projection='cyl', llcrnrlon=-80.0, llcrnrlat=33.0, urcrnrlon=-74.0, urcrnrlat=37.0,\n",
     "            lat_0=35.0, lon_0=-77.0, resolution='i')\n",
     "\n",
+    "# contour at 100% opacity before drawing colorbar\n",
     "contour = m.contourf(lon, lat, zhat, triangles=nv, ax=ax,tri=True,\n",
-    "                     levels=levels, shading='faceted', alpha=alpha, cmap=plt.cm.jet)\n",
+    "                     levels=levels, shading='faceted', alpha=1.0, cmap=plt.cm.jet)\n",
     "m.drawcoastlines()\n",
     "m.drawstates()\n",
     "m.drawrivers()\n",
     "m.warpimage()\n",
+    "# wms_server = \"https://services.nconemap.gov/secure/services/ortho_boundaries/MapServer/WmsServer?\"\n",
+    "# m.wmsimage(wms_server, layers=[\"0\",], verbose=True)\n",
     "\n",
     "# labels = [left,right,top,bottom]\n",
     "parallels = np.arange(33.0, 37.5, 0.5)\n",
@@ -159,6 +162,12 @@
     "cb.set_label('[m MSL]', fontsize=8)\n",
     "cb.ax.tick_params(axis='both', which='major', labelsize=8)\n",
     "\n",
+    "# contour with dynamic opacity after drawing colobar\n",
+    "for thing in contour.collections:\n",
+    "    thing.remove()\n",
+    "contour = m.contourf(lon, lat, zhat, triangles=nv, ax=ax,tri=True,\n",
+    "                     levels=levels, shading='faceted', alpha=alpha, cmap=plt.cm.jet)\n",
+    "\n",
     "fig_canvas = plt.gcf().canvas"
    ]
   },
@@ -173,13 +182,13 @@
    },
    "outputs": [],
    "source": [
-    "rmw_slider      = FloatSlider(min=p1min, max=p1max, step=dp1, value=rmw, description=\"Radius to Max Winds\")\n",
+    "rmw_slider      = FloatSlider(min=p1min, max=p1max, step=dp1, value=rmw, description=\"Radius to Max Winds [km]\")\n",
     "H_b_slider      = FloatSlider(min=p2min, max=p2max, step=dp2, value=H_b, description=\"Holland B\")\n",
-    "TS_slider       = FloatSlider(min=p3min, max=p3max, step=dp3, value=TS, description=\"Forward Speed\")\n",
-    "Vmax_slider     = FloatSlider(min=p4min, max=p4max, step=dp4, value=Vmax, description=\"Max Wind Speed\")\n",
-    "LonNorth_slider = FloatSlider(min=p5min+lon_offset, max=p5max+lon_offset, step=dp5, value=LonNorth+lon_offset, description=\"Northern Longitude\")\n",
-    "LonSouth_slider = FloatSlider(min=p6min+lon_offset, max=p6max+lon_offset, step=dp6, value=LonSouth+lon_offset, description=\"Southern Longitude\")\n",
-    "alpha_slider    = FloatSlider(min=0.0, max=1.0, step=0.05, value=alpha, description=\"Transparency\")"
+    "TS_slider       = FloatSlider(min=p3min, max=p3max, step=dp3, value=TS, description=\"Forward Speed [m/s]\")\n",
+    "Vmax_slider     = FloatSlider(min=p4min, max=p4max, step=dp4, value=Vmax, description=\"Max Wind Speed [m/s]\")\n",
+    "LonNorth_slider = FloatSlider(min=p5min+lon_offset, max=p5max+lon_offset, step=dp5, value=LonNorth+lon_offset, description=\"Northern Longitude [degrees]\")\n",
+    "LonSouth_slider = FloatSlider(min=p6min+lon_offset, max=p6max+lon_offset, step=dp6, value=LonSouth+lon_offset, description=\"Southern Longitude [degrees]\")\n",
+    "alpha_slider    = FloatSlider(min=0.0, max=100.0, step=5, value=alpha*100, description=\"Opacity [%]\")"
    ]
   },
   {
@@ -351,11 +360,12 @@
    "outputs": [],
    "source": [
     "def update_alpha(change):\n",
-    "    global alpha, contour\n",
+    "    global alpha, contour, cb\n",
     "    alpha = change['new']\n",
+    "    alpha = alpha / 100.0\n",
     "    for thing in contour.collections:\n",
     "        thing.remove()\n",
-    "    contour = m.contourf(lon, lat, zhat, triangles=nv, ax=ax,tri=True, levels=levels, shading='faceted', alpha=alpha)\n",
+    "    contour = m.contourf(lon, lat, zhat, triangles=nv, ax=ax,tri=True, levels=levels, shading='faceted', alpha=alpha)    \n",
     "    fig_canvas.draw_idle()\n",
     "\n",
     "alpha_slider.observe(update_alpha, names=[\"value\"])"
@@ -425,7 +435,7 @@
   },
   "widgets": {
    "state": {
-    "80a447b967f44269bb96ca0c7b144403": {
+    "43d11dfcb1f6421ebbc66b45c2815902": {
      "views": [
       {
        "cell_index": 13
