--- a/RSM-ipympl-basemap.ipynb
+++ b/RSM-ipympl-basemap.ipynb
@@ -109,7 +109,14 @@
    "metadata": {
     "collapsed": false,
     "urth": {
-     "dashboard": {}
+     "dashboard": {
+      "layout": {
+       "col": 0,
+       "height": 7,
+       "row": 18,
+       "width": 4
+      }
+     }
     }
    },
    "outputs": [],
@@ -140,9 +147,11 @@
     "m.drawcoastlines()\n",
     "m.drawstates()\n",
     "m.drawrivers()\n",
-    "m.warpimage()\n",
+    "# m.warpimage()\n",
     "# wms_server = \"https://services.nconemap.gov/secure/services/ortho_boundaries/MapServer/WmsServer?\"\n",
-    "# m.wmsimage(wms_server, layers=[\"0\",], verbose=True)\n",
+    "wms_server = \"http://129.206.228.72/cached/osm/service?\"\n",
+    "# m.wmsimage(wms_server, layers=[\"osm_auto:all\",], verbose=True)\n",
+    "m.wmsimage(wms_server, layers=[\"osm_auto:all\",], xpixels=500, verbose=False)\n",
     "\n",
     "# labels = [left,right,top,bottom]\n",
     "parallels = np.arange(33.0, 37.5, 0.5)\n",
@@ -435,7 +444,7 @@
   },
   "widgets": {
    "state": {
-    "43d11dfcb1f6421ebbc66b45c2815902": {
+    "f44ea4c3286f4d8081ee9468c9d60ae1": {
      "views": [
       {
        "cell_index": 13
