--- a/RSM-ipympl-basemap.ipynb
+++ b/RSM-ipympl-basemap.ipynb
@@ -41,9 +41,9 @@
    "source": [
     "# import matlab .mat file into python\n",
     "# get the model in a matlab file, stored as -v7.3\n",
-    "# the model components must be saved as individual variables, \n",
+    "# the model components must be saved as individual variables,\n",
     "# not as a struct.  See the matlab code structfields2vars\n",
-    "mf='temp3.mat';\n",
+    "mf = 'temp3.mat'\n",
     "\n",
     "f = h5py.File(mf, \"r\")"
    ]
@@ -59,48 +59,54 @@
    },
    "outputs": [],
    "source": [
-    "c=np.squeeze(f['c'][:])\n",
-    "k=np.squeeze(f['k'][:])\n",
-    "Nd=np.squeeze(f['n_d'][:])\n",
-    "P=np.transpose(f['P'][:])\n",
-    "R=np.transpose(f['R'][:])\n",
-    "weights=np.squeeze(f['weights'][:])\n",
-    "index=np.squeeze(f['index'][:])\n",
-    "xtest=np.array([ 66.8, 1.06, 7.5, 38, 5.23, 5.25])\n",
-    "xtest=np.squeeze(np.transpose(xtest))\n",
+    "c = np.squeeze(f['c'][:])\n",
+    "k = np.squeeze(f['k'][:])\n",
+    "Nd = np.squeeze(f['n_d'][:])\n",
+    "P = np.transpose(f['P'][:])\n",
+    "R = np.transpose(f['R'][:])\n",
+    "weights = np.squeeze(f['weights'][:])\n",
+    "index = np.squeeze(f['index'][:])\n",
+    "xtest = np.array([66.8, 1.06, 7.5, 38, 5.23, 5.25])\n",
+    "xtest = np.squeeze(np.transpose(xtest))\n",
     "\n",
-    "rmw=xtest[0]\n",
-    "H_b=xtest[1]\n",
-    "TS=xtest[2]\n",
-    "Vmax=xtest[3]\n",
-    "LonNorth=xtest[4]\n",
-    "LonSouth=xtest[5]\n",
+    "rmw = xtest[0]\n",
+    "H_b = xtest[1]\n",
+    "TS = xtest[2]\n",
+    "Vmax = xtest[3]\n",
+    "LonNorth = xtest[4]\n",
+    "LonSouth = xtest[5]\n",
     "alpha = 0.55\n",
     "\n",
-    "p1min=np.min(P[:,0])*1.1; p1max=np.max(P[:,0])*0.9   # rmw\n",
-    "p2min=np.min(P[:,1])*1.1; p2max=np.max(P[:,1])*0.9   # H_b\n",
-    "p3min=np.min(P[:,2])*1.1; p3max=np.max(P[:,2])*0.9   # TS\n",
-    "p4min=np.min(P[:,3])*1.1; p4max=np.max(P[:,3])*0.9   # Vmax\n",
-    "p5min=np.min(P[:,4])*1.1; p5max=np.max(P[:,4])*0.9   # LonNorth\n",
-    "p6min=np.min(P[:,5])*1.1; p6max=np.max(P[:,5])*0.9   # LonSouth\n",
+    "p1min = np.min(P[:, 0]) * 1.1   # rmw\n",
+    "p1max = np.max(P[:, 0]) * 0.9\n",
+    "p2min = np.min(P[:, 1]) * 1.1   # H_b\n",
+    "p2max = np.max(P[:, 1]) * 0.9\n",
+    "p3min = np.min(P[:, 2]) * 1.1   # TS\n",
+    "p3max = np.max(P[:, 2]) * 0.9\n",
+    "p4min = np.min(P[:, 3]) * 1.1   # Vmax\n",
+    "p4max = np.max(P[:, 3]) * 0.9\n",
+    "p5min = np.min(P[:, 4]) * 1.1   # LonNorth\n",
+    "p5max = np.max(P[:, 4]) * 0.9\n",
+    "p6min = np.min(P[:, 5]) * 1.1   # LonSouth\n",
+    "p6max = np.max(P[:, 5]) * 0.9\n",
     "\n",
-    "dp1=(p1max-p1min)/20\n",
-    "dp2=(p2max-p2min)/20\n",
-    "dp3=(p3max-p3min)/20\n",
-    "dp4=(p4max-p4min)/20\n",
-    "dp5=(p5max-p5min)/20\n",
-    "dp6=(p6max-p6min)/20\n",
+    "dp1 = (p1max - p1min) / 20\n",
+    "dp2 = (p2max - p2min) / 20\n",
+    "dp3 = (p3max - p3min) / 20\n",
+    "dp4 = (p4max - p4min) / 20\n",
+    "dp5 = (p5max - p5min) / 20\n",
+    "dp6 = (p6max - p6min) / 20\n",
     "\n",
     "# get the FEM grid parts from f to create a triangulation object\n",
     "lon = np.squeeze(f['x'][:])\n",
     "lat = np.squeeze(f['y'][:])\n",
     "latmin = np.mean(lat)  # needed for scaling lon/lat plots\n",
-    "nv  = np.squeeze(f['e'][:,:] -1)\n",
-    "nv=np.transpose(nv)\n",
-    "triangulation = Tri.Triangulation(lon,lat, triangles=nv)\n",
+    "nv = np.squeeze(f['e'][:, :] - 1)\n",
+    "nv = np.transpose(nv)\n",
+    "triangulation = Tri.Triangulation(lon, lat, triangles=nv)\n",
     "\n",
-    "NodeIndices=np.squeeze(f['NodeIndices'][:])\n",
-    "NodeIndices=(NodeIndices-1).astype(int)"
+    "NodeIndices = np.squeeze(f['NodeIndices'][:])\n",
+    "NodeIndices = (NodeIndices - 1).astype(int)"
    ]
   },
   {
@@ -121,52 +127,57 @@
    },
    "outputs": [],
    "source": [
-    "lon_offset=-82\n",
+    "lon_offset = -82\n",
     "\n",
-    "xtest=np.array([rmw,H_b,TS,Vmax,LonNorth,LonSouth])\n",
-    "temp=central_ckv(P,R,c,k,weights,Nd,index,xtest)\n",
-    "vmin=0\n",
-    "vmax=5\n",
-    "levels = linspace(vmin,vmax,11)\n",
+    "xtest = np.array([rmw, H_b, TS, Vmax, LonNorth, LonSouth])\n",
+    "temp = central_ckv(P, R, c, k, weights, Nd, index, xtest)\n",
+    "vmin = 0\n",
+    "vmax = 5\n",
+    "levels = linspace(vmin, vmax, 11)\n",
     "\n",
     "# put response into variable sized as lon.shape\n",
-    "zhat=ma.array(np.zeros(triangulation.x.shape))\n",
-    "zhat[:]=zhat.fill_value\n",
-    "zhat[NodeIndices]=temp\n",
-    "zhat[zhat<0]=0\n",
+    "zhat = ma.array(np.zeros(triangulation.x.shape))\n",
+    "zhat[:] = zhat.fill_value\n",
+    "zhat[NodeIndices] = temp\n",
+    "zhat[zhat < 0] = 0\n",
     "\n",
-    "fig = plt.figure(\"Storm Surge\", figsize=(5,3), dpi=144);\n",
-    "ax = fig.add_axes([0.05, 0.1, 0.8, 0.8]) \n",
-    "ax.set_aspect(1.0/np.cos(latmin * np.pi / 180.0))\n",
-    "m = Basemap(projection='cyl', llcrnrlon=-80.0, llcrnrlat=33.0, urcrnrlon=-74.0, urcrnrlat=37.0,\n",
+    "fig = plt.figure(\"Storm Surge\", figsize=(5, 3), dpi=144)\n",
+    "ax = fig.add_axes([0.05, 0.1, 0.8, 0.8])\n",
+    "ax.set_aspect(1.0 / np.cos(latmin * np.pi / 180.0))\n",
+    "m = Basemap(projection='cyl', llcrnrlon=-80.0, llcrnrlat=33.0,\n",
+    "            urcrnrlon=-74.0, urcrnrlat=37.0,\n",
     "            lat_0=35.0, lon_0=-77.0, resolution='i')\n",
     "\n",
     "# contour at 100% opacity before drawing colorbar\n",
-    "contour = m.contourf(lon, lat, zhat, triangles=nv, ax=ax,tri=True,\n",
-    "                     levels=levels, shading='faceted', alpha=1.0, cmap=plt.cm.jet)\n",
+    "contour = m.contourf(lon, lat, zhat, triangles=nv, ax=ax, tri=True,\n",
+    "                     levels=levels, shading='faceted', alpha=1.0,\n",
+    "                     cmap=plt.cm.jet)\n",
     "m.drawcoastlines()\n",
     "m.drawstates()\n",
     "m.drawrivers()\n",
     "# m.warpimage()\n",
-    "# wms_server = \"https://services.nconemap.gov/secure/services/ortho_boundaries/MapServer/WmsServer?\"\n",
+    "# wms_server = \"https://services.nconemap.gov/secure/services/\" \\\n",
+    "#              \"ortho_boundaries/MapServer/WmsServer?\"\n",
     "wms_server = \"http://129.206.228.72/cached/osm/service?\"\n",
-    "# m.wmsimage(wms_server, layers=[\"osm_auto:all\",], verbose=True)\n",
-    "m.wmsimage(wms_server, layers=[\"osm_auto:all\",], xpixels=500, verbose=False)\n",
+    "m.wmsimage(wms_server, layers=[\"osm_auto:all\", ], xpixels=500, verbose=False)\n",
     "\n",
     "# labels = [left,right,top,bottom]\n",
     "parallels = np.arange(33.0, 37.5, 0.5)\n",
-    "m.drawparallels(parallels,labels=[True,False,False,False], fontsize=6, labelstyle=\"+/-\")\n",
-    "meridians = np.arange(-80.0, -73.5 , 0.5)\n",
-    "m.drawmeridians(meridians,labels=[False,False,False,True], fontsize=6, labelstyle=\"+/-\")\n",
+    "m.drawparallels(parallels, labels=[True, False, False, False],\n",
+    "                fontsize=6, labelstyle=\"+/-\")\n",
+    "meridians = np.arange(-80.0, -73.5, 0.5)\n",
+    "m.drawmeridians(meridians, labels=[False, False, False, True],\n",
+    "                fontsize=6, labelstyle=\"+/-\")\n",
     "\n",
-    "ax.plot([-80, -70],[33.5,33.5],'g-')\n",
-    "ax.plot([-80, -70],[36.0,36.0],'g-')\n",
-    "artists_LonSouth_point = ax.plot([LonSouth+lon_offset],[33.5],'r*-')\n",
-    "artists_LonNorth_point = ax.plot([LonNorth+lon_offset],[36.0],'r*-')\n",
-    "artists_path_line = ax.plot([LonNorth+lon_offset, LonSouth+lon_offset],[36.0,33.5],'y-')\n",
+    "ax.plot([-80, -70], [33.5, 33.5], 'g-')\n",
+    "ax.plot([-80, -70], [36.0, 36.0], 'g-')\n",
+    "artists_LonSouth_point = ax.plot([LonSouth + lon_offset], [33.5], 'r*-')\n",
+    "artists_LonNorth_point = ax.plot([LonNorth + lon_offset], [36.0], 'r*-')\n",
+    "artists_path_line = ax.plot([LonNorth + lon_offset, LonSouth + lon_offset],\n",
+    "                            [36.0, 33.5], 'y-')\n",
     "\n",
     "# add colorbar\n",
-    "cbax = fig.add_axes([0.85, 0.1, 0.05, 0.8]) \n",
+    "cbax = fig.add_axes([0.85, 0.1, 0.05, 0.8])\n",
     "cb = plt.colorbar(contour, cax=cbax,  orientation='vertical')\n",
     "cb.set_label('[m MSL]', fontsize=8)\n",
     "cb.ax.tick_params(axis='both', which='major', labelsize=8)\n",
@@ -174,8 +185,9 @@
     "# contour with dynamic opacity after drawing colobar\n",
     "for thing in contour.collections:\n",
     "    thing.remove()\n",
-    "contour = m.contourf(lon, lat, zhat, triangles=nv, ax=ax,tri=True,\n",
-    "                     levels=levels, shading='faceted', alpha=alpha, cmap=plt.cm.jet)\n",
+    "contour = m.contourf(lon, lat, zhat, triangles=nv, ax=ax, tri=True,\n",
+    "                     levels=levels, shading='faceted', alpha=alpha,\n",
+    "                     cmap=plt.cm.jet)\n",
     "\n",
     "fig_canvas = plt.gcf().canvas"
    ]
@@ -191,13 +203,22 @@
    },
    "outputs": [],
    "source": [
-    "rmw_slider      = FloatSlider(min=p1min, max=p1max, step=dp1, value=rmw, description=\"Radius to Max Winds [km]\")\n",
-    "H_b_slider      = FloatSlider(min=p2min, max=p2max, step=dp2, value=H_b, description=\"Holland B\")\n",
-    "TS_slider       = FloatSlider(min=p3min, max=p3max, step=dp3, value=TS, description=\"Forward Speed [m/s]\")\n",
-    "Vmax_slider     = FloatSlider(min=p4min, max=p4max, step=dp4, value=Vmax, description=\"Max Wind Speed [m/s]\")\n",
-    "LonNorth_slider = FloatSlider(min=p5min+lon_offset, max=p5max+lon_offset, step=dp5, value=LonNorth+lon_offset, description=\"Northern Longitude [degrees]\")\n",
-    "LonSouth_slider = FloatSlider(min=p6min+lon_offset, max=p6max+lon_offset, step=dp6, value=LonSouth+lon_offset, description=\"Southern Longitude [degrees]\")\n",
-    "alpha_slider    = FloatSlider(min=0.0, max=100.0, step=5, value=alpha*100, description=\"Opacity [%]\")"
+    "rmw_slider = FloatSlider(min=p1min, max=p1max, step=dp1,\n",
+    "                         value=rmw, description=\"Radius to Max Winds [km]\")\n",
+    "H_b_slider = FloatSlider(min=p2min, max=p2max, step=dp2,\n",
+    "                         value=H_b, description=\"Holland B\")\n",
+    "TS_slider = FloatSlider(min=p3min, max=p3max, step=dp3,\n",
+    "                        value=TS, description=\"Forward Speed [m/s]\")\n",
+    "Vmax_slider = FloatSlider(min=p4min, max=p4max, step=dp4,\n",
+    "                          value=Vmax, description=\"Max Wind Speed [m/s]\")\n",
+    "LonNorth_slider = FloatSlider(min=p5min + lon_offset, max=p5max + lon_offset,\n",
+    "                              step=dp5, value=LonNorth + lon_offset,\n",
+    "                              description=\"Northern Longitude [degrees]\")\n",
+    "LonSouth_slider = FloatSlider(min=p6min + lon_offset, max=p6max + lon_offset,\n",
+    "                              step=dp6, value=LonSouth + lon_offset,\n",
+    "                              description=\"Southern Longitude [degrees]\")\n",
+    "alpha_slider = FloatSlider(min=0.0, max=100.0, step=5,\n",
+    "                           value=alpha * 100, description=\"Opacity [%]\")"
    ]
   },
   {
@@ -214,19 +235,20 @@
     "def update_contour():\n",
     "    global contour, xtest, temp, zhat\n",
     "\n",
-    "    xtest=np.array([rmw,H_b,TS,Vmax,LonNorth,LonSouth])\n",
-    "    temp=central_ckv(P,R,c,k,weights,Nd,index,xtest)\n",
+    "    xtest = np.array([rmw, H_b, TS, Vmax, LonNorth, LonSouth])\n",
+    "    temp = central_ckv(P, R, c, k, weights, Nd, index, xtest)\n",
     "\n",
     "    # put response into variable sized as lon.shape\n",
-    "    zhat=ma.array(np.zeros(triangulation.x.shape))\n",
-    "    zhat[:]=zhat.fill_value\n",
-    "    zhat[NodeIndices]=temp\n",
-    "    zhat[zhat<0]=0\n",
+    "    zhat = ma.array(np.zeros(triangulation.x.shape))\n",
+    "    zhat[:] = zhat.fill_value\n",
+    "    zhat[NodeIndices] = temp\n",
+    "    zhat[zhat < 0] = 0\n",
     "\n",
     "    for thing in contour.collections:\n",
     "        thing.remove()\n",
-    "    contour = m.contourf(lon, lat, zhat, triangles=nv, ax=ax,tri=True,\n",
-    "                         levels=levels, shading='faceted', alpha=alpha, cmap=plt.cm.jet)"
+    "    contour = m.contourf(lon, lat, zhat, triangles=nv, ax=ax, tri=True,\n",
+    "                         levels=levels, shading='faceted', alpha=alpha,\n",
+    "                         cmap=plt.cm.jet)"
    ]
   },
   {
@@ -324,9 +346,10 @@
     "    global LonNorth, artists_LonNorth_point, artists_path_line\n",
     "    LonNorth = change['new'] - lon_offset\n",
     "    artists_LonNorth_point.pop(0).remove()\n",
-    "    artists_LonNorth_point = ax.plot([LonNorth+lon_offset],[36.0],'r*-')\n",
+    "    artists_LonNorth_point = ax.plot([LonNorth + lon_offset], [36.0], 'r*-')\n",
     "    artists_path_line.pop(0).remove()\n",
-    "    artists_path_line = ax.plot([LonNorth+lon_offset, LonSouth+lon_offset],[36.0,33.5],'y-')\n",
+    "    artists_path_line = ax.plot([LonNorth + lon_offset, LonSouth + lon_offset],\n",
+    "                                [36.0, 33.5], 'y-')\n",
     "    update_contour()\n",
     "    fig_canvas.draw_idle()\n",
     "\n",
@@ -348,9 +371,10 @@
     "    global LonSouth, artists_LonSouth_point, artists_path_line\n",
     "    LonSouth = change['new'] - lon_offset\n",
     "    artists_LonSouth_point.pop(0).remove()\n",
-    "    artists_LonSouth_point = ax.plot([LonSouth+lon_offset],[33.5],'r*-')\n",
+    "    artists_LonSouth_point = ax.plot([LonSouth + lon_offset], [33.5], 'r*-')\n",
     "    artists_path_line.pop(0).remove()\n",
-    "    artists_path_line = ax.plot([LonNorth+lon_offset, LonSouth+lon_offset],[36.0,33.5],'y-')\n",
+    "    artists_path_line = ax.plot([LonNorth + lon_offset, LonSouth + lon_offset],\n",
+    "                                [36.0, 33.5], 'y-')\n",
     "    update_contour()\n",
     "    fig_canvas.draw_idle()\n",
     "\n",
@@ -374,7 +398,8 @@
     "    alpha = alpha / 100.0\n",
     "    for thing in contour.collections:\n",
     "        thing.remove()\n",
-    "    contour = m.contourf(lon, lat, zhat, triangles=nv, ax=ax,tri=True, levels=levels, shading='faceted', alpha=alpha)    \n",
+    "    contour = m.contourf(lon, lat, zhat, triangles=nv, ax=ax, tri=True,\n",
+    "                         levels=levels, shading='faceted', alpha=alpha)\n",
     "    fig_canvas.draw_idle()\n",
     "\n",
     "alpha_slider.observe(update_alpha, names=[\"value\"])"
@@ -398,21 +423,10 @@
    },
    "outputs": [],
    "source": [
-    "slider_box = VBox([rmw_slider,H_b_slider,TS_slider,Vmax_slider,LonNorth_slider,LonSouth_slider,alpha_slider])\n",
+    "slider_box = VBox([rmw_slider, H_b_slider, TS_slider, Vmax_slider,\n",
+    "                   LonNorth_slider, LonSouth_slider, alpha_slider])\n",
     "HBox([fig_canvas, slider_box])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "urth": {
-     "dashboard": {}
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -444,7 +458,7 @@
   },
   "widgets": {
    "state": {
-    "f44ea4c3286f4d8081ee9468c9d60ae1": {
+    "d7ecd6a9a9e447b28aa7853962180f10": {
      "views": [
       {
        "cell_index": 13
