Adding shell script for updating Anaconda 3 environment.

--- a/RSM-ipympl-basemap.ipynb
+++ b/RSM-ipympl-basemap.ipynb
@@ -5,11 +5,32 @@
    "execution_count": 1,
    "metadata": {
     "collapsed": false,
-    "urth": {
-     "dashboard": {}
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "hidden": true
+       },
+       "report_default": {
+        "hidden": false
+       }
+      }
+     }
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/cbc/anaconda3/envs/rsmdash/lib/python3.5/site-packages/matplotlib/font_manager.py:279: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
+      "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n",
+      "/home/cbc/anaconda3/envs/rsmdash/lib/python3.5/site-packages/matplotlib/font_manager.py:279: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
+      "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n"
+     ]
+    }
+   ],
    "source": [
     "import ipympl\n",
     "from ipywidgets import *\n",
@@ -33,8 +54,18 @@
    "execution_count": 2,
    "metadata": {
     "collapsed": true,
-    "urth": {
-     "dashboard": {}
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "hidden": true
+       },
+       "report_default": {
+        "hidden": false
+       }
+      }
+     }
     }
    },
    "outputs": [],
@@ -53,8 +84,18 @@
    "execution_count": 3,
    "metadata": {
     "collapsed": false,
-    "urth": {
-     "dashboard": {}
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "hidden": true
+       },
+       "report_default": {
+        "hidden": false
+       }
+      }
+     }
     }
    },
    "outputs": [],
@@ -114,13 +155,20 @@
    "execution_count": 4,
    "metadata": {
     "collapsed": false,
-    "urth": {
-     "dashboard": {
-      "layout": {
-       "col": 0,
-       "height": 7,
-       "row": 18,
-       "width": 4
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "col": 0,
+        "height": 7,
+        "hidden": false,
+        "row": 18,
+        "width": 4
+       },
+       "report_default": {
+        "hidden": false
+       }
       }
      }
     }
@@ -197,8 +245,18 @@
    "execution_count": 5,
    "metadata": {
     "collapsed": false,
-    "urth": {
-     "dashboard": {}
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "hidden": true
+       },
+       "report_default": {
+        "hidden": false
+       }
+      }
+     }
     }
    },
    "outputs": [],
@@ -226,8 +284,18 @@
    "execution_count": 6,
    "metadata": {
     "collapsed": true,
-    "urth": {
-     "dashboard": {}
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "hidden": true
+       },
+       "report_default": {
+        "hidden": false
+       }
+      }
+     }
     }
    },
    "outputs": [],
@@ -256,8 +324,18 @@
    "execution_count": 7,
    "metadata": {
     "collapsed": true,
-    "urth": {
-     "dashboard": {}
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "hidden": true
+       },
+       "report_default": {
+        "hidden": false
+       }
+      }
+     }
     }
    },
    "outputs": [],
@@ -276,8 +354,18 @@
    "execution_count": 8,
    "metadata": {
     "collapsed": true,
-    "urth": {
-     "dashboard": {}
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "hidden": true
+       },
+       "report_default": {
+        "hidden": false
+       }
+      }
+     }
     }
    },
    "outputs": [],
@@ -296,8 +384,18 @@
    "execution_count": 9,
    "metadata": {
     "collapsed": true,
-    "urth": {
-     "dashboard": {}
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "hidden": true
+       },
+       "report_default": {
+        "hidden": false
+       }
+      }
+     }
     }
    },
    "outputs": [],
@@ -316,8 +414,18 @@
    "execution_count": 10,
    "metadata": {
     "collapsed": true,
-    "urth": {
-     "dashboard": {}
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "hidden": true
+       },
+       "report_default": {
+        "hidden": false
+       }
+      }
+     }
     }
    },
    "outputs": [],
@@ -336,8 +444,18 @@
    "execution_count": 11,
    "metadata": {
     "collapsed": false,
-    "urth": {
-     "dashboard": {}
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "hidden": true
+       },
+       "report_default": {
+        "hidden": false
+       }
+      }
+     }
     }
    },
    "outputs": [],
@@ -361,8 +479,18 @@
    "execution_count": 12,
    "metadata": {
     "collapsed": false,
-    "urth": {
-     "dashboard": {}
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "hidden": true
+       },
+       "report_default": {
+        "hidden": false
+       }
+      }
+     }
     }
    },
    "outputs": [],
@@ -386,8 +514,18 @@
    "execution_count": 13,
    "metadata": {
     "collapsed": true,
-    "urth": {
-     "dashboard": {}
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "hidden": true
+       },
+       "report_default": {
+        "hidden": false
+       }
+      }
+     }
     }
    },
    "outputs": [],
@@ -410,13 +548,20 @@
    "execution_count": 14,
    "metadata": {
     "collapsed": false,
-    "urth": {
-     "dashboard": {
-      "layout": {
-       "col": 0,
-       "height": 18,
-       "row": 0,
-       "width": 12
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "col": 0,
+        "height": 18,
+        "hidden": false,
+        "row": 0,
+        "width": 12
+       },
+       "report_default": {
+        "hidden": false
+       }
       }
      }
     }
@@ -431,10 +576,30 @@
  ],
  "metadata": {
   "anaconda-cloud": {},
+  "extensions": {
+   "jupyter_dashboards": {
+    "activeView": "grid_default",
+    "version": 1,
+    "views": {
+     "grid_default": {
+      "cellMargin": 10,
+      "defaultCellHeight": 20,
+      "layoutStrategy": "packed",
+      "maxColumns": 12,
+      "name": "grid",
+      "type": "grid"
+     },
+     "report_default": {
+      "name": "report",
+      "type": "report"
+     }
+    }
+   }
+  },
   "kernelspec": {
-   "display_name": "Python [widgets]",
+   "display_name": "Python [rsmdash]",
    "language": "python",
-   "name": "Python [widgets]"
+   "name": "Python [rsmdash]"
   },
   "language_info": {
    "codemirror_mode": {
@@ -447,14 +612,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.5.2"
-  },
-  "urth": {
-   "dashboard": {
-    "cellMargin": 10,
-    "defaultCellHeight": 20,
-    "layoutStrategy": "packed",
-    "maxColumns": 12
-   }
   },
   "widgets": {
    "state": {
